--- a/src/gtk/gtk-4.0/gtk-dark-cyan.css
+++ b/src/gtk/gtk-4.0/gtk-dark-cyan.css
@@ -2386,7 +2386,7 @@ actionbar > revealer > box splitbutton {
 }
 
 .titlebar.windowhandle viewswitcher button:not(.titlebutton):not(.suggested-action):not(.destructive-action) {
-  color: #b5c3cb;
+  color: #94a5b6;
   border-radius: 0;
   box-shadow: none;
   border: none;
@@ -2395,18 +2395,18 @@ actionbar > revealer > box splitbutton {
 }
 
 .titlebar.windowhandle viewswitcher button:checked:not(.titlebutton):not(.suggested-action):not(.destructive-action), .titlebar.windowhandle viewswitcher button:active:not(.titlebutton):not(.suggested-action):not(.destructive-action) {
-  color: #b5c3cb;
-  background-color: rgba(181, 195, 203, 0.15);
+  color: #94a5b6;
+  background-color: rgba(148, 165, 182, 0.15);
   border-image: radial-gradient(circle closest-corner at center calc(100% - 1px), #459996 100%, transparent 0%) 0 0 3/0 0 3px;
 }
 
 .titlebar.windowhandle viewswitcher button:disabled:not(.titlebutton):not(.suggested-action):not(.destructive-action) {
-  color: rgba(181, 195, 203, 0.4);
+  color: rgba(148, 165, 182, 0.4);
 }
 
 .titlebar.windowhandle viewswitcher button:checked:disabled:not(.titlebutton):not(.suggested-action):not(.destructive-action) {
-  color: rgba(181, 195, 203, 0.4);
-  background-color: rgba(181, 195, 203, 0.05);
+  color: rgba(148, 165, 182, 0.4);
+  background-color: rgba(148, 165, 182, 0.05);
   border-image: radial-gradient(circle closest-corner at center calc(100% - 1px), rgba(69, 153, 150, 0.4) 100%, transparent 0%) 0 0 3/0 0 3px;
 }
 
@@ -2430,7 +2430,7 @@ actionbar > revealer > box splitbutton {
 }
 
 .sidebar-pane entry, headerbar entry {
-  color: #b5c3cb;
+  color: #94a5b6;
   border-color: rgba(9, 9, 11, 0.42);
   background-color: rgba(86, 91, 107, 0.42);
 }
@@ -2444,7 +2444,7 @@ actionbar > revealer > box splitbutton {
 }
 
 .sidebar-pane entry:focus-within, headerbar entry:focus-within {
-  color: #f1f4f5;
+  color: #d1d8df;
   border-color: #5DBBC1;
   background-color: rgba(72, 76, 90, 0.42);
   background-clip: padding-box;
@@ -2455,7 +2455,7 @@ actionbar > revealer > box splitbutton {
 }
 
 .sidebar-pane entry:disabled, headerbar entry:disabled {
-  color: rgba(181, 195, 203, 0.55);
+  color: rgba(148, 165, 182, 0.55);
   border-color: rgba(9, 9, 11, 0.42);
   background-color: rgba(86, 91, 107, 0.85);
 }
@@ -2466,7 +2466,7 @@ actionbar > revealer > box splitbutton {
 }
 
 .sidebar-pane button, headerbar button {
-  color: #b5c3cb;
+  color: #94a5b6;
   outline-offset: -3px;
   background-color: transparent;
   border-color: transparent;
@@ -2478,21 +2478,21 @@ actionbar > revealer > box splitbutton {
 }
 
 .sidebar-pane button:hover, headerbar button:hover {
-  color: #b5c3cb;
+  color: #94a5b6;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: rgba(181, 195, 203, 0.18);
+  background-color: rgba(148, 165, 182, 0.18);
 }
 
 .sidebar-pane button:active, headerbar button:active, .sidebar-pane button:checked, headerbar button:checked {
   transition: 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
   color: #333644;
-  border-color: transparent;
+  border-color: #5DBBC1;
   background-color: #5DBBC1;
   background-clip: padding-box;
 }
 
 .sidebar-pane button:disabled, headerbar button:disabled {
-  color: rgba(181, 195, 203, 0.45);
+  color: rgba(148, 165, 182, 0.45);
   background-color: transparent;
   border-color: transparent;
 }
@@ -2585,7 +2585,7 @@ headerbar popover > contents button:disabled:active label, headerbar popover > c
 headerbar {
   min-height: 42px;
   padding: 0;
-  color: #b5c3cb;
+  color: #94a5b6;
   border: none;
   background-color: #24262D;
   box-shadow: inset 0 -1px rgba(0, 0, 0, 0.25), inset 0 1px rgba(255, 255, 255, 0.1);
@@ -2593,7 +2593,7 @@ headerbar {
 
 headerbar:backdrop {
   transition: 200ms ease-out;
-  color: rgba(181, 195, 203, 0.7);
+  color: rgba(148, 165, 182, 0.7);
   background-color: #2f323b;
 }
 
@@ -2730,32 +2730,32 @@ headerbar.selection-mode button:backdrop {
 headerbar buttonbox.linked > button,
 headerbar stackswitcher.linked > button {
   background-color: #3b3e49;
-  color: #b5c3cb;
+  color: #94a5b6;
   border-width: 0;
   border-color: rgba(0, 0, 0, 0.25);
 }
 
 headerbar buttonbox.linked > button:hover,
 headerbar stackswitcher.linked > button:hover {
-  background-color: #474b56;
+  background-color: #444854;
 }
 
 headerbar buttonbox.linked > button:active, headerbar buttonbox.linked > button:checked,
 headerbar stackswitcher.linked > button:active,
 headerbar stackswitcher.linked > button:checked {
   color: #333644;
-  border-color: transparent;
+  border-color: #5DBBC1;
   background-color: #5DBBC1;
 }
 
 headerbar buttonbox.linked > button:disabled,
 headerbar stackswitcher.linked > button:disabled {
-  color: rgba(181, 195, 203, 0.4);
+  color: rgba(148, 165, 182, 0.4);
 }
 
 headerbar buttonbox.linked > button:disabled label,
 headerbar stackswitcher.linked > button:disabled label {
-  color: rgba(181, 195, 203, 0.4);
+  color: rgba(148, 165, 182, 0.4);
 }
 
 headerbar stackswitcher.linked > button + button {
@@ -2828,7 +2828,7 @@ headerbar button.suggested-action:active, headerbar button.suggested-action:chec
 }
 
 headerbar button.suggested-action.flat:disabled, headerbar button.suggested-action:disabled {
-  color: rgba(181, 195, 203, 0.45);
+  color: rgba(148, 165, 182, 0.45);
   background-color: transparent;
   border-color: transparent;
 }
@@ -2867,7 +2867,7 @@ headerbar button.destructive-action:active, headerbar button.destructive-action:
 }
 
 headerbar button.destructive-action.flat:disabled, headerbar button.destructive-action:disabled {
-  color: rgba(181, 195, 203, 0.45);
+  color: rgba(148, 165, 182, 0.45);
   background-color: transparent;
   border-color: transparent;
 }
@@ -2883,9 +2883,9 @@ headerbar spinbutton:not(.vertical):focus-within {
 }
 
 headerbar spinbutton:not(.vertical) button, headerbar spinbutton:not(.vertical) button:disabled {
-  color: #b5c3cb;
+  color: #94a5b6;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: rgba(181, 195, 203, 0.18);
+  background-color: rgba(148, 165, 182, 0.18);
 }
 
 headerbar spinbutton:not(.vertical) button:hover {
@@ -2894,12 +2894,12 @@ headerbar spinbutton:not(.vertical) button:hover {
 
 headerbar spinbutton:not(.vertical) button:active, headerbar spinbutton:not(.vertical) button:checked {
   color: #333644;
-  border-color: transparent;
+  border-color: #5DBBC1;
   background-color: #5DBBC1;
 }
 
 headerbar spinbutton:not(.vertical) button:disabled {
-  color: rgba(181, 195, 203, 0.42);
+  color: rgba(148, 165, 182, 0.42);
 }
 
 headerbar spinbutton:not(.vertical) > button + button {
@@ -2926,11 +2926,11 @@ headerbar spinbutton:not(.vertical) > entry:focus-within + button {
 }
 
 headerbar combobox:disabled {
-  color: rgba(181, 195, 203, 0.42);
+  color: rgba(148, 165, 182, 0.42);
 }
 
 headerbar combobox > .linked > button.combo {
-  color: #b5c3cb;
+  color: #94a5b6;
   border-color: rgba(9, 9, 11, 0.42);
   background-color: rgba(86, 91, 107, 0.42);
 }
@@ -2940,14 +2940,14 @@ headerbar combobox > .linked > button.combo image, headerbar combobox > .linked 
 }
 
 headerbar combobox > .linked > button.combo:hover {
-  color: #f1f4f5;
+  color: #d1d8df;
   border-color: #5DBBC1;
   background-color: rgba(72, 76, 90, 0.42);
   box-shadow: none;
 }
 
 headerbar combobox > .linked > button.combo:disabled {
-  color: rgba(181, 195, 203, 0.55);
+  color: rgba(148, 165, 182, 0.55);
   border-color: rgba(9, 9, 11, 0.42);
   background-color: rgba(86, 91, 107, 0.85);
 }
@@ -3140,7 +3140,7 @@ headerbar separator.titlebutton {
   min-height: 0;
   background: none;
   border-width: 0 0;
-  border-image: linear-gradient(to bottom, rgba(181, 195, 203, 0) 25%, rgba(181, 195, 203, 0.35) 25%, rgba(181, 195, 203, 0.35) 75%, rgba(181, 195, 203, 0) 75%) 0 1/0 0 stretch;
+  border-image: linear-gradient(to bottom, rgba(148, 165, 182, 0) 25%, rgba(148, 165, 182, 0.35) 25%, rgba(148, 165, 182, 0.35) 75%, rgba(148, 165, 182, 0) 75%) 0 1/0 0 stretch;
 }
 
 headerbar separator.titlebutton:backdrop {
@@ -3406,11 +3406,11 @@ treeview.view header.button.dnd:active {
 menubar {
   padding: 0;
   background-color: #24262d;
-  color: #b5c3cb;
+  color: #94a5b6;
 }
 
 menubar:backdrop {
-  color: rgba(181, 195, 203, 0.7);
+  color: rgba(148, 165, 182, 0.7);
 }
 
 menubar > item {
@@ -3427,7 +3427,7 @@ menubar > item:selected {
 }
 
 menubar > item:disabled {
-  color: rgba(181, 195, 203, 0.45);
+  color: rgba(148, 165, 182, 0.45);
   border-color: transparent;
 }
 
@@ -7001,18 +7001,18 @@ viewswitcher {
 }
 
 viewswitcher button.toggle:hover {
-  background-color: rgba(181, 195, 203, 0.06);
-  color: #b5c3cb;
+  background-color: rgba(148, 165, 182, 0.06);
+  color: #94a5b6;
 }
 
 viewswitcher button.toggle:active {
-  background-color: rgba(181, 195, 203, 0.16);
-  color: #b5c3cb;
+  background-color: rgba(148, 165, 182, 0.16);
+  color: #94a5b6;
 }
 
 viewswitcher button.toggle:checked {
-  background-color: rgba(181, 195, 203, 0.08);
-  color: #b5c3cb;
+  background-color: rgba(148, 165, 182, 0.08);
+  color: #94a5b6;
   box-shadow: inset 0 -3px #459996;
 }
 
@@ -7479,20 +7479,20 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .sidebar-pane .navigation-sidebar > row {
-  color: #b5c3cb;
+  color: #94a5b6;
 }
 
 .sidebar-pane .navigation-sidebar > row .sidebar-icon {
-  color: rgba(181, 195, 203, 0.6);
+  color: rgba(148, 165, 182, 0.6);
 }
 
 .sidebar-pane .navigation-sidebar > row:hover {
-  color: #b5c3cb;
+  color: #94a5b6;
   background-color: rgba(255, 255, 255, 0.08);
 }
 
 .sidebar-pane .navigation-sidebar > row:active {
-  color: #b5c3cb;
+  color: #94a5b6;
   background-color: rgba(255, 255, 255, 0.12);
 }
 
@@ -7507,22 +7507,22 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .sidebar-pane .navigation-sidebar > row:disabled {
-  color: rgba(181, 195, 203, 0.45);
+  color: rgba(148, 165, 182, 0.45);
 }
 
 .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button {
-  color: #b5c3cb;
+  color: #94a5b6;
 }
 
 .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:hover {
-  color: #b5c3cb;
+  color: #94a5b6;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: rgba(181, 195, 203, 0.18);
+  background-color: rgba(148, 165, 182, 0.18);
 }
 
 .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:active {
   color: #333644;
-  border-color: transparent;
+  border-color: #5DBBC1;
   background-color: #5DBBC1;
 }
 
@@ -7539,18 +7539,18 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .sidebar-pane {
-  background-color: rgba(79, 88, 104, 0.95);
-  color: #b5c3cb;
+  background-color: #282a35;
+  color: #94a5b6;
 }
 
 .sidebar-pane:backdrop {
   background-color: #2B2D37;
-  color: rgba(181, 195, 203, 0.45);
+  color: rgba(148, 165, 182, 0.45);
 }
 
 .sidebar-pane .dim-label, .sidebar-pane label.separator,
 .sidebar-pane entry > text > placeholder, .sidebar-pane spinbutton:not(.vertical) > text > placeholder, .sidebar-pane spinbutton.vertical > text > text > placeholder, .sidebar-pane headerbar .subtitle, headerbar .sidebar-pane .subtitle, .sidebar-pane popover.background label.separator, popover.background .sidebar-pane label.separator, .sidebar-pane row label.subtitle, row .sidebar-pane label.subtitle {
-  color: rgba(181, 195, 203, 0.45);
+  color: rgba(148, 165, 182, 0.45);
 }
 
 .sidebar-pane .sidebar,
@@ -7624,12 +7624,12 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .sidebar-pane banner > revealer > widget {
-  background-color: mix(#459996,rgba(79, 88, 104, 0.95),0.7);
-  color: #b5c3cb;
+  background-color: mix(#459996,#282a35,0.7);
+  color: #94a5b6;
 }
 
 .sidebar-pane banner > revealer > widget:backdrop {
-  background-color: mix(#459996,rgba(79, 88, 104, 0.95),0.7);
+  background-color: mix(#459996,#282a35,0.7);
 }
 
 .sidebar-pane:dir(ltr), .sidebar-pane:dir(ltr) banner > revealer > widget, .sidebar-pane.end:dir(rtl), .sidebar-pane.end:dir(rtl) banner > revealer > widget {
@@ -7896,41 +7896,41 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 
 #NautilusPathBar > menubutton > button:hover, #NautilusPathBar #NautilusPathButton:hover, .nautilus-window headerbar splitbutton > button:hover,
 .nautilus-window headerbar splitbutton > menubutton > button:hover {
-  color: #b5c3cb;
-  background-color: rgba(181, 195, 203, 0.1);
+  color: #94a5b6;
+  background-color: rgba(148, 165, 182, 0.1);
 }
 
 #NautilusPathBar > menubutton > button:active, #NautilusPathBar #NautilusPathButton:active, .nautilus-window headerbar splitbutton > button:active,
 .nautilus-window headerbar splitbutton > menubutton > button:active {
-  color: #b5c3cb;
-  background-color: rgba(181, 195, 203, 0.2);
+  color: #94a5b6;
+  background-color: rgba(148, 165, 182, 0.2);
 }
 
 #NautilusPathBar > menubutton > button:checked, #NautilusPathBar #NautilusPathButton:checked, .nautilus-window headerbar splitbutton > button:checked,
 .nautilus-window headerbar splitbutton > menubutton > button:checked {
-  color: #b5c3cb;
-  background-color: rgba(181, 195, 203, 0.15);
+  color: #94a5b6;
+  background-color: rgba(148, 165, 182, 0.15);
 }
 
 .sidebar-pane scrollbar {
-  border-color: rgba(68, 76, 90, 0.95);
+  border-color: #1d1f27;
 }
 
 .sidebar-pane scrollbar.overlay-indicator:not(.dragging):not(.hovering) > range > trough > slider {
-  background-color: #e2e7eb;
+  background-color: #c1cbd5;
   border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .sidebar-pane scrollbar > range > trough {
-  background-color: rgba(68, 76, 90, 0.95);
+  background-color: #1d1f27;
 }
 
 .sidebar-pane scrollbar > range > trough > slider {
-  background-color: rgba(226, 231, 235, 0.7);
+  background-color: rgba(193, 203, 213, 0.7);
 }
 
 .sidebar-pane scrollbar > range > trough > slider:hover {
-  background-color: #f1f4f5;
+  background-color: #d1d8df;
 }
 
 .sidebar-pane scrollbar > range > trough > slider:hover:active {
@@ -7942,11 +7942,11 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row, .nautilus-window flap .navigation-sidebar > row {
-  color: #b5c3cb;
+  color: #94a5b6;
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row .sidebar-icon, .nautilus-window flap .navigation-sidebar > row .sidebar-icon {
-  color: rgba(181, 195, 203, 0.75);
+  color: rgba(148, 165, 182, 0.75);
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:hover, .nautilus-window flap .navigation-sidebar > row:hover {
@@ -7974,22 +7974,22 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:disabled, .nautilus-window flap .navigation-sidebar > row:disabled {
-  color: rgba(181, 195, 203, 0.45);
+  color: rgba(148, 165, 182, 0.45);
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button, .nautilus-window flap .navigation-sidebar > row:not(:selected) button.sidebar-button {
-  color: #b5c3cb;
+  color: #94a5b6;
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:hover, .nautilus-window flap .navigation-sidebar > row:not(:selected) button.sidebar-button:hover {
-  color: #b5c3cb;
+  color: #94a5b6;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: rgba(181, 195, 203, 0.18);
+  background-color: rgba(148, 165, 182, 0.18);
 }
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:active, .nautilus-window flap .navigation-sidebar > row:not(:selected) button.sidebar-button:active {
   color: #333644;
-  border-color: transparent;
+  border-color: #5DBBC1;
   background-color: #5DBBC1;
 }
 
@@ -8030,9 +8030,9 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .nautilus-window headerbar splitbutton:hover {
-  color: #b5c3cb;
+  color: #94a5b6;
   border-color: rgba(0, 0, 0, 0.25);
-  background-color: rgba(181, 195, 203, 0.18);
+  background-color: rgba(148, 165, 182, 0.18);
 }
 
 .nautilus-window headerbar splitbutton > button,
@@ -8041,8 +8041,8 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 .nautilus-window flap .navigation-sidebar {
-  background-color: rgba(79, 88, 104, 0.95);
-  color: #b5c3cb;
+  background-color: #282a35;
+  color: #94a5b6;
   padding: 0;
 }
 
@@ -8136,23 +8136,23 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 #NautilusQueryEditor > menubutton > button:hover {
-  color: #b5c3cb;
-  background-color: rgba(181, 195, 203, 0.1);
+  color: #94a5b6;
+  background-color: rgba(148, 165, 182, 0.1);
 }
 
 #NautilusQueryEditor > menubutton > button:active {
-  color: #b5c3cb;
-  background-color: rgba(181, 195, 203, 0.2);
+  color: #94a5b6;
+  background-color: rgba(148, 165, 182, 0.2);
 }
 
 #NautilusQueryEditor > menubutton > button:checked {
-  color: #b5c3cb;
-  background-color: rgba(181, 195, 203, 0.15);
+  color: #94a5b6;
+  background-color: rgba(148, 165, 182, 0.15);
 }
 
 #NautilusPathBar {
   min-height: 0;
-  background-color: rgba(181, 195, 203, 0.1);
+  background-color: rgba(148, 165, 182, 0.1);
   border-radius: 3px;
   margin: 6px 0;
   padding: 0 1px;
@@ -8165,15 +8165,15 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 }
 
 #NautilusPathBar #NautilusPathButton label.dim-label {
-  color: rgba(181, 195, 203, 0.75);
+  color: rgba(148, 165, 182, 0.75);
 }
 
 #NautilusPathBar #NautilusPathButton label.dim-label:hover, #NautilusPathBar #NautilusPathButton label.dim-label:active, #NautilusPathBar #NautilusPathButton label.dim-label:checked {
-  color: #b5c3cb;
+  color: #94a5b6;
 }
 
 #NautilusPathBar #NautilusPathButton.current-dir {
-  color: #b5c3cb;
+  color: #94a5b6;
 }
 
 #NautilusPathBar #NautilusPathButton.current-dir:hover, #NautilusPathBar #NautilusPathButton.current-dir:active {
@@ -8274,15 +8274,15 @@ menubutton.flat.popup.sources-button > button image.calendar-color-image {
 }
 
 .sidebar-pane datechooser .current-week {
-  background-color: rgba(181, 195, 203, 0.05);
+  background-color: rgba(148, 165, 182, 0.05);
 }
 
 .sidebar-pane datechooser label.weeknum {
-  color: rgba(181, 195, 203, 0.75);
+  color: rgba(148, 165, 182, 0.75);
 }
 
 .sidebar-pane datechooser label.weekday {
-  color: rgba(181, 195, 203, 0.45);
+  color: rgba(148, 165, 182, 0.45);
 }
 
 @define-color theme_fg_color #DDE2E7;
@@ -8314,8 +8314,8 @@ menubutton.flat.popup.sources-button > button image.calendar-color-image {
 @define-color content_view_bg #333644;
 /* Very contrasty background for text views (@theme_text_color foreground) */
 @define-color text_view_bg #262833;
-@define-color wm_title alpha(#b5c3cb, 0.8);
-@define-color wm_unfocused_title alpha(#b5c3cb, 0.5);
+@define-color wm_title alpha(#94a5b6, 0.8);
+@define-color wm_unfocused_title alpha(#94a5b6, 0.5);
 @define-color wm_bg #24262d;
 @define-color wm_bg_unfocused #2f323b;
 @define-color wm_highlight #2b2d36;
@@ -8327,9 +8327,9 @@ menubutton.flat.popup.sources-button > button image.calendar-color-image {
 @define-color wm_button_hover_bg #3b3e49;
 @define-color wm_button_active_bg #459996;
 @define-color wm_button_hover_border rgba(0, 0, 0, 0.25);
-@define-color wm_icon_bg #b5c3cb;
-@define-color wm_icon_unfocused_bg #35444c;
-@define-color wm_icon_hover_bg #b5c3cb;
+@define-color wm_icon_bg #94a5b6;
+@define-color wm_icon_unfocused_bg #1e262d;
+@define-color wm_icon_hover_bg #94a5b6;
 @define-color wm_icon_active_bg #FAFAFA;
 @define-color budgie_tasklist_indicator_color #459996;
 @define-color budgie_tasklist_indicator_color_active #459996;
