--- a/src/gtk/sass/_drawing.scss
+++ b/src/gtk/sass/_drawing.scss
@@ -276,7 +276,7 @@
   // pushed header-bar button
   //
     color: $base_color;
-    border-color: $accent_color;
+    border-color: transparent;
     background-color: $accent_color;
   }
 
