--- a/src/gtk/gtk-4.0/gtk-purple.css
+++ b/src/gtk/gtk-4.0/gtk-purple.css
@@ -2486,7 +2486,7 @@ actionbar > revealer > box splitbutton {
 .sidebar-pane button:active, headerbar button:active, .sidebar-pane button:checked, headerbar button:checked {
   transition: 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
   color: #FAFAFA;
-  border-color: #B05CCC;
+  border-color: transparent;
   background-color: #B05CCC;
   background-clip: padding-box;
 }
@@ -2744,7 +2744,7 @@ headerbar buttonbox.linked > button:active, headerbar buttonbox.linked > button:
 headerbar stackswitcher.linked > button:active,
 headerbar stackswitcher.linked > button:checked {
   color: #FAFAFA;
-  border-color: #B05CCC;
+  border-color: transparent;
   background-color: #B05CCC;
 }
 
@@ -2894,7 +2894,7 @@ headerbar spinbutton:not(.vertical) button:hover {
 
 headerbar spinbutton:not(.vertical) button:active, headerbar spinbutton:not(.vertical) button:checked {
   color: #FAFAFA;
-  border-color: #B05CCC;
+  border-color: transparent;
   background-color: #B05CCC;
 }
 
@@ -7522,7 +7522,7 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 
 .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:active {
   color: #FAFAFA;
-  border-color: #B05CCC;
+  border-color: transparent;
   background-color: #B05CCC;
 }
 
@@ -8108,7 +8108,7 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 
 .nautilus-window .sidebar-pane .navigation-sidebar > row:not(:selected) button.sidebar-button:active, .nautilus-window flap .navigation-sidebar > row:not(:selected) button.sidebar-button:active {
   color: #FAFAFA;
-  border-color: #B05CCC;
+  border-color: transparent;
   background-color: #B05CCC;
 }
 
